Tối ưu lấy Po nhanh hơn